fixed bug with cursor: pointer not showing on hover

--- a/css/components/_buttons.scss
+++ b/css/components/_buttons.scss
@@ -25,7 +25,8 @@
     line-height: 1.4;
     box-shadow: none;
     color: white;
-    background: transparent
+    background: transparent;
+    cursor: pointer;
 }
 
 .btn button {
